# ProgSFML

./: CMakeLists.txt  main.cpp  Разработка графического приложения с использованием SFML.pptx
.github/workflows/: build.yml
